# run

./: CMakeLists.txt  README.md  installer.cpp  main.cpp
